<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <POU Name="DebugInfo" Id="{489c56af-ae27-4926-af44-96228e2f35be}" SpecialFunc="None">
    <Declaration><![CDATA[(*
Provides access to registered debug information, enabling monitoring and troubleshooting of system components.
*)
FUNCTION_BLOCK DebugInfo
VAR
	nLastMsgIdx: REFERENCE TO UDINT REF= _Debug.nLastIdx;
	nTotalNumber: REFERENCE TO UDINT REF= _Debug.nTotalNumber;
	nPanicNumber: REFERENCE TO UDINT REF= _Debug.nPanicNumber;
	nNotifyNumber: REFERENCE TO UDINT REF= _Debug.nNotifyNumber;
	entry: REFERENCE TO ARRAY[1..Param.DEBUG_CAP] OF _DebugInfo REF= _Debug.debugMsg;	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>