<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <POU Name="DebugMsg" Id="{7c548072-7d6e-4388-b29f-e0cd2e001bbc}" SpecialFunc="None">
    <Declaration><![CDATA[(*
Logs a debug message as a string tied to a `I_Debug` interface for inspection and troubleshooting within the IDE.
*)
FUNCTION DebugMsg
VAR_INPUT
	iDebugMain		: I_Debug;
	sInfo			: Str;
	iDebugSub		: I_Debug := 0;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[_Debug.nErrorNumber := _Debug.nErrorNumber + 1;

IF _Debug.nLastMsg < Param.DEBUGMSG_CAP THEN
	_Debug.nLastMsg := _Debug.nLastMsg + 1;
ELSE
	_Debug.nLastMsg := 1;
END_IF

_Debug.debugMsg[_Debug.nLastMsg].iDebugMain := iDebugMain;
_Debug.debugMsg[_Debug.nLastMsg].iDebugSub := iDebugSub;
_Debug.debugMsg[_Debug.nLastMsg].sInfo := sInfo;
]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>